# EditGuru

./: .gitignore  README.md  demo_script.sh  main.py  pyproject.toml  requirements.dev.txt  tasks.py
misc/myapp/: README.md  pyproject.toml  tasks.py
misc/myapp/src/: __init__.py
misc/myapp/src/blueprints/: example.py
src/edit_guru/: main.py
src/edit_guru/agents/ai_developer/: __init__.py  agent.py  config.py  tools.py
todos/: add_max_cost_parameter_plan.md
